message CRDTRuntimeMessage {
  repeated bytes messagePath = 1;
  required string sender = 2;
}
