message BatchingLayerMessage {
  // All of the edge labels are converted to Uint8Array's (specifically,
  // strings are converted), then packed sequentially into this one big
  // array. Lengths are stored in the next field.
  required bytes edgeLabelsPacked = 1;
  // For Uint8Array's, this is length; for strings, it is ~length
  // (bitwise NOT). That way, we store the type in the sign bit, at the
  // cost of only one bit.
  repeated sint32 edgeLabelLengths = 2 [packed=true];
  // When the batch contains a single message, edgeParents and messages
  // are []. Instead, just use the edge labels in order (given by
  // edgeLabelsPacked and edgeLabelLengths) as the single
  // messagePath.
  repeated uint32 edgeParents = 3 [packed=true];
  repeated uint32 messages = 4 [packed=true];
}
